# araboja-shorts

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.draft.md  CONTRIBUTING.md  MAINTAINERS.md  README.draft.md  README.md  ROADMAP.md  SECURITY.draft.md  SECURITY.md  main_gpt.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  pypi-publish.yml  python-ci.yml
araboja_shorts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: codex-oss-application-draft.md  media-and-licensing.md  oss-readiness-checklist.md  release-checklist.md
scripts/: doctor.py
